--- a/pythonbasics.ipynb
+++ b/pythonbasics.ipynb
@@ -28,13 +28,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 8,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "a1ECQrVp8cv5",
-        "outputId": "b412cbe9-6cc5-4c19-9c27-50fc73c092c9"
+        "outputId": "cc200af9-2fd7-4184-b998-ae19e5fb2a0b"
       },
       "outputs": [
         {
@@ -63,9 +63,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "NXaRdze98pPz",
-        "outputId": "784ae52b-00c3-4bbd-f96e-1ec1ba118765"
+        "outputId": "60c73939-0278-4ac5-be36-83f532e0fd5b"
       },
-      "execution_count": 4,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
@@ -87,16 +87,16 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "r11XfEVe9B-U",
-        "outputId": "da79d9b8-bf22-418b-88ed-0451cf910c64"
+        "outputId": "8e68d59a-5e84-49ed-f88b-8c3a15da4975"
       },
-      "execution_count": 5,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Enter your name: shivika\n",
-            "Welcome, shivika\n"
+            "Enter your name: Vanshika\n",
+            "Welcome, Vanshika\n"
           ]
         }
       ]
@@ -117,9 +117,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "VTbDxLf-9Iiy",
-        "outputId": "24cea312-fd2f-4dd0-aa64-fb0eeb5c346b"
+        "outputId": "55dfa523-c6d8-438a-aa56-b099b7b8b240"
       },
-      "execution_count": 6,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "stream",
@@ -145,9 +145,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "HG0sk4A09Pcp",
-        "outputId": "3c900859-851a-42be-ec3e-7d322722a00e"
+        "outputId": "65102fa4-32af-4ab8-c027-3de069401a43"
       },
-      "execution_count": 7,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "stream",
