--- a/loops.ipynb
+++ b/loops.ipynb
@@ -28,13 +28,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 6,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "PUtMNvcOACpb",
-        "outputId": "f5827a60-8df0-45fd-da5c-583b3c65359f"
+        "outputId": "8610d3f8-35cf-4501-a2d3-a17e854024f5"
       },
       "outputs": [
         {
@@ -51,8 +51,7 @@
       ],
       "source": [
         "for i in range(1, 6):\n",
-        "    print(i)\n",
-        ""
+        "    print(i)\n"
       ]
     },
     {
@@ -68,9 +67,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "dTRoBBbcAQ9m",
-        "outputId": "9aa4a1a9-bc07-4175-af86-92767b88bb25"
+        "outputId": "e7f5ee3f-52e8-40e3-f15a-2ed1ffd030ee"
       },
-      "execution_count": 2,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
@@ -96,9 +95,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "BsrGUBT7AWAh",
-        "outputId": "c929e93c-8ed3-4f01-8898-1c548ee8e622"
+        "outputId": "322a6a53-141d-4e89-d3da-134e371ec193"
       },
-      "execution_count": 3,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
@@ -127,9 +126,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "HRGp3c3UAYiP",
-        "outputId": "ba2f06af-a765-48a2-f05a-143f8ea59b32"
+        "outputId": "1b89bde9-d605-40d6-8c79-107fbeddecfe"
       },
-      "execution_count": 4,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
@@ -152,9 +151,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "vXTbG5ziAaug",
-        "outputId": "18b18cbc-33a4-4e0e-826d-a24ea9e1f9a0"
+        "outputId": "d3115050-5f46-4517-d5c1-08443dfd797a"
       },
-      "execution_count": 5,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
